<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.salman.areacalculationwithradiobutton.MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="38dp"
        android:text="Length 1:"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="42dp"
        android:hint="Enter Length"
        android:text="Length 2: "
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextLength1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Length"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editTextLength2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Length"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editTextLength1"
        android:layout_alignStart="@+id/editTextLength1" />

    <TextView
        android:id="@+id/textViewArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="46dp"
        android:text="Area"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLength2"
        android:layout_alignStart="@+id/editTextLength2"
        android:layout_alignTop="@+id/textViewArea"
        android:text="@string/result"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewArea"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/textViewArea"
        android:layout_below="@+id/textViewArea"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/radioButtonTriangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/areaTriangle" />

        <RadioButton
            android:id="@+id/radioButtonSquare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/areaSquare" />

        <RadioButton
            android:id="@+id/radioButtonCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/areaCircle" />

        <RadioButton
            android:id="@+id/radioButtonrectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/areaRectangle" />

        <RadioButton
            android:id="@+id/radioButtonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup"
        android:layout_below="@+id/radioGroup"
        android:layout_marginRight="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/calculate" />


</RelativeLayout>
